Fix clipping of book card when title is too long

--- a/assets/css/App.css
+++ b/assets/css/App.css
@@ -55,7 +55,6 @@
     width: 190px;
     margin: 30px 10px 0;
     cursor: pointer;
-    max-height: 500px;
     overflow: hidden;
 }
 
